tests/testdata/errors/undefined_variable.pine
// Test undefined variable access - should fail

var x = 10
var y = undefinedVar

// Expected error: Variable 'undefinedVar' not found
